--- a/src/css/filters.css
+++ b/src/css/filters.css
@@ -273,6 +273,34 @@ font-weight: 500;
   border-radius: 12px;
 background: rgba(5, 5, 5, 0.18);
 }
+
+
+.filters-icon-rating-black use {
+  fill: rgba(248, 248, 248, 0.10);;
+}
+
+.filters-icon-rating-red-1 use:nth-child(-n+1) {
+  fill: #EEA10C;
+}
+
+.filters-icon-rating-red-2 use:nth-child(-n+2) {
+  fill: #EEA10C;
+}
+
+.filters-icon-rating-red-3 use:nth-child(-n+3) {
+  fill: #EEA10C;
+}
+
+.filters-icon-rating-red-4 use:nth-child(-n+4) {
+  fill: #EEA10C;
+}
+
+.filters-icon-rating-red-5 use {
+  fill: #EEA10C;
+}
+
+
+
 @media screen and (min-width: 768px) {
   .filters-form {
       display: flex;
@@ -303,6 +331,10 @@ background: rgba(5, 5, 5, 0.18);
       margin: 0 0 14 auto;
       height: 16px;
   }
+  .filters-form {
+      margin-left: 32px;
+  }
+
 .filters-box-parent {
   display: flex;
   flex-direction: row;
