--- a/src/css/modal-recipe.css
+++ b/src/css/modal-recipe.css
@@ -1,5 +1,32 @@
+[data-hidden] {
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal-recipe-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  padding-top: 80px;
+  padding-bottom: 80px;
+
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  overflow-y: scroll;
+}
+
 .modal-recipe {
   position: relative;
+  /* left: 0;
+  right: 0; */
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 20;
 
   width: 335px;
   padding: 40px 20px;
@@ -74,6 +101,8 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 1.33;
+
+  text-transform: uppercase;
 }
 
 .ab-stars-and-time {
@@ -111,7 +140,7 @@
   width: 15px;
   height: 15px;
 
-  fill: var(--star-color);
+  /* fill: var(--star-color); */
 }
 
 .ab-ingredient-list {
