--- a/src/partials/hero-favorites.html
+++ b/src/partials/hero-favorites.html
@@ -1,3 +1,3 @@
 <section class="hero-favorites">
-  <div class="hero-favorites__image"></div>
+  <div class="hero-favorites__image container"></div>
 </section>
